--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -21,11 +21,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        
-    - name: Install dependencies
-      run: npm install
 
     - name: Build
       run: |
-        npm install
+        npm ci
         npx webpack
