--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -12,17 +12,40 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [19.x]
+        node-version: [ 19.x ]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Build
-      run: |
-        npm ci
-        npx webpack
+          # Consider this as an add on to optimize the execution of actions
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOSpath: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: Install package dependencies
+        run: npm install
+
+      - name: Check linting and formatting
+        # Custom script for checking the linting and formatting being in place
+        run: npm run lint
+
+        # Run test cases and this could ensure minimum coverage as well if set
+      - name: Execute test cases
+        run: npm run test
+
+      - name: Create test build
+        run: npm run build
